fix modal disply(not centered)

--- a/style.scss
+++ b/style.scss
@@ -115,12 +115,7 @@ header {
     }
 }
 
-.header {
-    @include flex(row, center, center);
-    height: fit-content;
-    width: 100%;
-    margin: 0;
-}
+
 
 .navbar-bg {
     position: absolute;
@@ -256,7 +251,7 @@ header .bar-title {
 }
 
 
-.main {
+main {
     @include flex(column, space-around, center);
     max-width: 100%;
     height: 50%;
@@ -425,14 +420,24 @@ ul { // psuedo-links at the bottom of index.html
 
 
 //other pages -----------------------------------------------------------------
-header {
-    position: sticky;
-    opacity: 1;
-    z-index: 2;
-    top: 0px;
+// header {
+//     position: fixed;
+//     opacity: 1;
+//     z-index: 2;
+//     top: 0px;
 //     background: rgba(255, 69, 0, .2);
-//     // -webkit-backdrop-filter : blur(10px);
-    // backdrop-filter: blur(10px);
+//     -webkit-backdrop-filter : blur(10px);
+//     backdrop-filter: blur(10px);
+// }
+
+.header {
+    @include flex(row, center, center);
+    position: fixed;
+    top: 0;
+    height: fit-content;
+    width: 100%;
+    margin: 0;
+    z-index: 2;
 }
 
 .page-title {
@@ -447,7 +452,7 @@ header {
     }
 }
 .main-content { // main content for pages other than
-    @extend .main;
+    @extend main;
     margin-top: 60px;
     height: auto;
     @media screen and (min-width: 992px) {
@@ -524,8 +529,10 @@ header {
 }
 
 .modal-dialog {
-    @include flex(row, center, center);
-    height: 100%;    
+    @include flex(row, center, center); 
+    padding: 15px;
+    height: 100%;
+    margin: 0 auto;
 }
 .modal-content {
     @include flex(column, space-around, center);
@@ -552,7 +559,6 @@ header {
         padding-top: 20px;
     }
     input {
-        text-align: center;
         color: $orange;
         padding: 5px 15px;
         border-radius: 5px;
@@ -562,9 +568,13 @@ header {
             outline-color: $orange;
         }
     }
-    select {
+    input::placeholder {
         color: black;
-        width: 100%;
+        opacity: .5;
+    }
+    select {
+        @extend input;
+        color: black;
     }
     button {
         padding: .4rem 1rem;
